# slechte_grappen_api

./: .env.example  .gitignore  Cargo.toml  refinery.toml
migrations/: V1__initial.sql
src/: main.rs
src/controllers/: mod.rs  score_boards.rs  users.rs
src/libs/: db_connection.rs  env_keys.rs  management.rs  mod.rs  model.rs  query_builder.rs  system_management.rs
src/models/: file.rs  interface.rs  mod.rs  point.rs  score_board.rs  user.rs
src/repositories/: mod.rs
