[package]
name = "slechte_grappen_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio-postgres = "0.7.6"
tokio = "1.20.1"
dotenv = "0.15.0"
refinery = {version = "0.8.7", features = ["tokio-postgres"]}
serde_json = "1.0.108"
