[package]
name = "slechte_grappen_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio-postgres = "0.7.6"
tokio = "1.20.1"
dotenv = "0.15.0"
refinery = {version = "0.8.7", features = ["tokio-postgres"]}
sql_query_builder = "1.0.2"
futures-util = "0.3.27"
sea-query = {version = "0.28.4", features = ['backend-postgres', 'with-json', 'postgres-array']}
serde_json = "1.0.108"

# [profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# strip = true        # Strip symbols from binary*
